--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
+#__pycache__/
 *.py[cod]
 *$py.class
 
@@ -103,7 +103,7 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-logs/
+#logs/
 *.log
 test_*
 test/
